# introspectiv-rs

./: .gitignore  Cargo.toml  Trunk.toml  base.css  flake.nix  index.html  package-lock.json  package.json  shell.nix
public/: main.css
src/: app.rs  layout.rs  lib.rs  main.rs
src/components/: mod.rs
src/components/game_of_life/: cell.rs  grid.rs  mod.rs
src/routes/: about.rs  gol.rs  index.rs  mod.rs
