[package]
name = "intr"
version = "0.1.0"
edition = "2024"

[dependencies]
# wasm
yew = { version = "0.22.1", features = ["csr"] }
yew-router = "0.19.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "DomRect",
    "Element",
    "CanvasRenderingContext2d"
]}

# components
lucide-yew = { version = "2.577.0", features = ["all-icons"] }

# random
rand = "0.10.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
gloo = "0.11.0"
